# dfguard

./: CHANGELOG.md  Cargo.toml  Dockerfile  PERF_PLAN.md  README.md  acl.conf.example  clippy.toml  devenv.nix  devenv.yaml
.github/workflows/: container.yml
deploy/: dfguard-acl-config.yaml  dfguard-certs.yaml  dfguard-helmrelease.yaml  dfguard-issuer.yaml  run-local.sh
scripts/: perf_campaign.sh
src/: main.rs
tests/: load_integration.rs
