[package]
name = "dfguard"
version = "0.2.6"
edition = "2024"
license = "MPL-2.0"
description = "Minimal mTLS-authenticating proxy for DragonflyDB/Redis"
readme = "README.md"
repository = "https://github.com/m00nwtchr/dfguard"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
notify = "6"
pem = "3"
rustls = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-rustls = "0.26"
x509-parser = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
